--- a/FinanceTrackerApp/appsettings.Development.json
+++ b/FinanceTrackerApp/appsettings.Development.json
@@ -6,6 +6,12 @@
     }
   },
   "Firebase": {
+    "ApiKey": "AIzaSyAAJeXBPwpVLslTScY4RckxvIJt5Z7RwFw",
+    "AuthDomain": "financetrackerapp-29d5b.firebaseapp.com",
+    "ProjectId": "financetrackerapp-29d5b",
+    "StorageBucket": "financetrackerapp-29d5b.firebasestorage.app",
+    "MessagingSenderId": "635922794311",
+    "AppId": "1:635922794311:web:148576b5ac666e625cae62",
     "DatabaseUrl": "",
     "AuthToken": ""
   }
