Complete local-first features: categories CRUD, analytics, local goals store, auth hardening, config and UI cleanup

--- a/FinanceTrackerApp/appsettings.json
+++ b/FinanceTrackerApp/appsettings.json
@@ -14,6 +14,7 @@
     "MessagingSenderId": "635922794311",
     "AppId": "1:635922794311:web:148576b5ac666e625cae62",
     "DatabaseUrl": "",
-    "AuthToken": ""
+    "AuthToken": "",
+    "AllowDemoLogin": false
   }
 }
