--- a/FinanceTrackerApp/DockerFile
+++ b/FinanceTrackerApp/DockerFile
@@ -1,5 +1,5 @@
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
-WORKDIR /src
+WORKDIR /app
 COPY . .
 RUN dotnet restore
 RUN dotnet publish -c Release -o /app/publish
