--- a/FinanceTrackerApp/Dockerfile
+++ b/FinanceTrackerApp/Dockerfile
@@ -3,7 +3,7 @@ FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 WORKDIR /app
 COPY . .
 RUN dotnet restore
-RUN dotnet publish -c Release -o /app/publish
+RUN dotnet publish -c Release
 
 # Runtime stage
 FROM mcr.microsoft.com/dotnet/aspnet:10.0
