--- a/FinanceTrackerApp/Dockerfile
+++ b/FinanceTrackerApp/Dockerfile
@@ -1,17 +1,15 @@
-# Build stage
+FROM mcr.microsoft.com/dotnet/aspnet:10.0 as base
+WORKDIR /app
+
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
+COPY . /src
+RUN ls
+RUN dotnet build "FinanceTrackerApp.csproj" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "FinanceTrackerApp.csproj" -c Release -n /app/publish
+
+FROM base AS final
 WORKDIR /app
-COPY . .
-RUN dotnet restore
-RUN dotnet publish -c Release
-
-# Runtime stage
-FROM mcr.microsoft.com/dotnet/aspnet:10.0
-WORKDIR /app
-COPY --from=build /app/publish .
-
-# Make sure ASP.NET listens on the dynamic port Render assigns
-ENV ASPNETCORE_URLS=http://+:$PORT
-
-# Run the published DLL
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "FinanceTrackerApp.dll"]
